Fix spacing on comment thread pagination button

--- a/public/style.css
+++ b/public/style.css
@@ -1165,6 +1165,11 @@ video {
   margin-bottom: 0.75rem;
 }
 
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
 .mx-4 {
   margin-left: 1rem;
   margin-right: 1rem;
